--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "bcrypt==4.0.1",
     "passlib>=1.7.4",
     "pydantic>=2.11.7",
+    "psycopg2-binary>=2.9.10",
     "pydantic-settings>=2.10.1",
     "PyJWT>=2.10.1",
     "sqlmodel>=0.0.24",
