--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 fastapi[standard]>=0.116.1
 bcrypt==4.0.1
 passlib>=1.7.4
+psycopg2-binary==2.9.10
 pydantic>=2.11.7
 pydantic-settings>=2.10.1
 PyJWT>=2.10.1
