--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Simple REST API built on FastAPI"
 requires-python = ">=3.10"
 readme = "README.md"
 license = "MIT"
+license-files = ["LICEN[CS]E*"]
 dependencies = [
     "fastapi[standard]>=0.116.1",
     "bcrypt==4.0.1",
